--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
  </head>
  <body>
 	 <center><h1>邱約憲的第一個網站</h1></center>
+	 <div id="list"></div>
 	 <hr>
+	 <script>
+		 let list=document.getelementbyid("list");
+		 list.innderhtml=".....載入中....";
+	 </script>
  </body>
 </html>
