--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	 <div id="list"></div>
 	 <hr>
 	 <script>
-		 let list=document.getelementbyid("list");
-		 list.innderhtml=".....載入中....";
+		 let list=document.getElementById("list");
+		 list.innderHTML=".....載入中....";
 	 </script>
  </body>
 </html>
